[gd_scene load_steps=6 format=3 uid="uid://d22svxk6tquby"]

[ext_resource type="Script" path="res://menus/character_creator.gd" id="1_e1whd"]
[ext_resource type="Texture2D" uid="uid://ci1asotexskrs" path="res://resources/materials/paper/Color.jpg" id="2_15u48"]
[ext_resource type="PackedScene" uid="uid://csqpumv0ochcw" path="res://menus/theme/button.tscn" id="3_t8tgw"]
[ext_resource type="Texture2D" uid="uid://bfwa6f1dupnff" path="res://resources/materials/board/Color.jpg" id="4_5xp16"]
[ext_resource type="PackedScene" uid="uid://32m0hqaidtg" path="res://menus/way.tscn" id="5_8xri3"]

[node name="CharacterCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_e1whd")

[node name="Sprite2D" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_15u48")
expand_mode = 1

[node name="Divider" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ways" type="VBoxContainer" parent="Divider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Class" parent="Divider/Ways" instance=ExtResource("5_8xri3")]
layout_mode = 2

[node name="Origin" parent="Divider/Ways" instance=ExtResource("5_8xri3")]
layout_mode = 2

[node name="Religion" parent="Divider/Ways" instance=ExtResource("5_8xri3")]
layout_mode = 2

[node name="Character" type="VBoxContainer" parent="Divider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.33

[node name="Dummy" type="Control" parent="Divider/Character"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Name" type="LineEdit" parent="Divider/Character"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
placeholder_text = "Name"
alignment = 1
caret_blink = true

[node name="Dummy2" type="Control" parent="Divider/Character"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="Stats" type="HBoxContainer" parent="Divider/Character"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Labels" type="VBoxContainer" parent="Divider/Character/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Stats" type="Label" parent="Divider/Character/Stats/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Stats"
horizontal_alignment = 1

[node name="Hp" type="Label" parent="Divider/Character/Stats/Labels"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "TXT_HP_DESCRIPTION"
mouse_filter = 1
text = "Hp"
horizontal_alignment = 1

[node name="Mana" type="Label" parent="Divider/Character/Stats/Labels"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "TXT_MANA_DESCRIPTION"
mouse_filter = 1
text = "Mana"
horizontal_alignment = 1

[node name="Shield" type="Label" parent="Divider/Character/Stats/Labels"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "TXT_SHIELD__DESCRIPTION"
mouse_filter = 1
text = "Shield"
horizontal_alignment = 1

[node name="SoulBurn" type="Label" parent="Divider/Character/Stats/Labels"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "TXT_SOULBURN_DESCRIPTION"
mouse_filter = 1
text = "SoulBurn"
horizontal_alignment = 1

[node name="Damage" type="Label" parent="Divider/Character/Stats/Labels"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "TXT_DAMAGEMULT__DESCRIPTION"
mouse_filter = 1
text = "Damage"
horizontal_alignment = 1

[node name="Flow" type="Label" parent="Divider/Character/Stats/Labels"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "TXT_FLOW_DESCRIPTION"
mouse_filter = 1
text = "Flow"
horizontal_alignment = 1

[node name="Base" type="VBoxContainer" parent="Divider/Character/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Base" type="Label" parent="Divider/Character/Stats/Base"]
layout_mode = 2
size_flags_vertical = 6
text = "Base"
horizontal_alignment = 1

[node name="Hp" type="Label" parent="Divider/Character/Stats/Base"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Mana" type="Label" parent="Divider/Character/Stats/Base"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Shield" type="Label" parent="Divider/Character/Stats/Base"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="SoulBurn" type="Label" parent="Divider/Character/Stats/Base"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Damage" type="Label" parent="Divider/Character/Stats/Base"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Flow" type="Label" parent="Divider/Character/Stats/Base"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Increments" type="VBoxContainer" parent="Divider/Character/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EachLevel" type="Label" parent="Divider/Character/Stats/Increments"]
layout_mode = 2
size_flags_vertical = 6
text = "Each level "
horizontal_alignment = 1

[node name="Hp" type="Label" parent="Divider/Character/Stats/Increments"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Mana" type="Label" parent="Divider/Character/Stats/Increments"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Shield" type="Label" parent="Divider/Character/Stats/Increments"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="SoulBurn" type="Label" parent="Divider/Character/Stats/Increments"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Damage" type="Label" parent="Divider/Character/Stats/Increments"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Flow" type="Label" parent="Divider/Character/Stats/Increments"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="Dummy3" type="Control" parent="Divider/Character"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="Divider/Character"]
layout_mode = 2

[node name="Start" parent="Divider/Character/Buttons" instance=ExtResource("3_t8tgw")]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Start
"

[node name="Cancel" parent="Divider/Character/Buttons" instance=ExtResource("3_t8tgw")]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Ways2" type="VBoxContainer" parent="Divider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Race" parent="Divider/Ways2" instance=ExtResource("5_8xri3")]
layout_mode = 2

[node name="Culture" parent="Divider/Ways2" instance=ExtResource("5_8xri3")]
layout_mode = 2

[node name="Profession" parent="Divider/Ways2" instance=ExtResource("5_8xri3")]
layout_mode = 2

[node name="WaySelector" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.891
anchor_bottom = 0.843
offset_right = -2.0

[node name="Border" type="TextureRect" parent="WaySelector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_5xp16")
expand_mode = 1

[node name="Background" type="TextureRect" parent="WaySelector"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.05
anchor_right = 0.975
anchor_bottom = 0.95
texture = ExtResource("2_15u48")
expand_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="WaySelector/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WaySelector/Background/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="WaySelector/Background/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="WaySelector/Background/ScrollContainer/VBoxContainer"]
layout_mode = 2

[connection signal="text_submitted" from="Divider/Character/Name" to="." method="_on_name_text_submitted"]
[connection signal="pressed" from="Divider/Character/Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Divider/Character/Buttons/Cancel" to="." method="_on_cancel_pressed"]
